// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadAssetDialog from computer snapshots the component 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c4 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c1 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: rgb(220,220,228,0.8);
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 51.875rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c8 svg {
  height: 12px;
  width: 12px;
}

.c8 svg > g,
.c8 svg path {
  fill: #ffffff;
}

.c8[aria-disabled='true'] {
  pointer-events: none;
}

.c8:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c8:focus-visible {
  outline: none;
}

.c8:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c9 svg > g,
.c9 svg path {
  fill: #8e8ea9;
}

.c9:hover svg > g,
.c9:hover svg path {
  fill: #666687;
}

.c9:active svg > g,
.c9:active svg path {
  fill: #a5a5ba;
}

.c9[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c9[aria-disabled='true'] svg path {
  fill: #666687;
}

.c5 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c35 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c37 > * + * {
  margin-left: 8px;
}

.c7 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c27 {
  color: #666687;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c17 {
  background: #eaeaef;
}

.c18 {
  height: 1px;
  border: none;
  margin: 0;
}

.c10 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c19 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c20 {
  background: #f6f6f9;
  padding-top: 64px;
  padding-bottom: 64px;
  border-radius: 4px;
  border-color: #c0c0cf;
  border: 1px solid #c0c0cf;
  position: relative;
}

.c26 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c28 {
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  z-index: 1;
  width: 100%;
}

.c30 {
  position: relative;
}

.c14 {
  color: #4945ff;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c16 {
  color: #666687;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c12 {
  padding: 16px;
}

.c13 {
  border-bottom: 2px solid #4945ff;
}

.c15 {
  border-bottom: 2px solid transparent;
}

.c11[aria-disabled='true'] {
  cursor: not-allowed;
}

.c34 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c31 svg {
  height: 12px;
  width: 12px;
}

.c31 svg > g,
.c31 svg path {
  fill: #ffffff;
}

.c31[aria-disabled='true'] {
  pointer-events: none;
}

.c31:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c31:focus-visible {
  outline: none;
}

.c31:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c32 .sc-iitrMj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 .c33 {
  color: #ffffff;
}

.c32[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c32[aria-disabled='true'] .c33 {
  color: #666687;
}

.c32[aria-disabled='true'] svg > g,
.c32[aria-disabled='true'] svg path {
  fill: #666687;
}

.c32[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c32[aria-disabled='true']:active .c33 {
  color: #666687;
}

.c32[aria-disabled='true']:active svg > g,
.c32[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c32:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c32:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c38 .sc-iitrMj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 .c33 {
  color: #ffffff;
}

.c38[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c38[aria-disabled='true'] .c33 {
  color: #666687;
}

.c38[aria-disabled='true'] svg > g,
.c38[aria-disabled='true'] svg path {
  fill: #666687;
}

.c38[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c38[aria-disabled='true']:active .c33 {
  color: #666687;
}

.c38[aria-disabled='true']:active svg > g,
.c38[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c38:hover {
  background-color: #f6f6f9;
}

.c38:active {
  background-color: #eaeaef;
}

.c38 .c33 {
  color: #32324d;
}

.c38 svg > g,
.c38 svg path {
  fill: #32324d;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c25 {
  font-size: 3.75rem;
}

.c25 svg path {
  fill: #4945ff;
}

.c21 {
  border-style: dashed;
}

.c29 {
  opacity: 0;
  cursor: pointer;
}

<body
  class="lock-body-scroll"
>
  <div
    class="c0"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c1"
    >
      <div>
        <div
          aria-labelledby="title"
          aria-modal="true"
          class="c2 c3"
          role="dialog"
        >
          <div
            class="c4 c5"
          >
            <div
              class="c6"
            >
              <h2
                class="c7"
                id="title"
              >
                Upload assets
              </h2>
              <button
                aria-disabled="false"
                aria-label="Close the modal"
                class="c8 c9"
                type="button"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                    fill="#212134"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div>
            <div
              class="c10"
            >
              <div
                aria-label="How do you want to upload your assets?"
                role="tablist"
              >
                <button
                  aria-controls="tabgroup-1-0-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c11"
                  id="tabgroup-1-0-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c12 c13"
                  >
                    <span
                      class="c14"
                    >
                      From computer
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c11"
                  id="tabgroup-1-1-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c12 c15"
                  >
                    <span
                      class="c16"
                    >
                      From url
                    </span>
                  </div>
                </button>
              </div>
              <hr
                class="c17 c18"
              />
            </div>
            <div>
              <div
                aria-labelledby="tabgroup-1-0-tab"
                id="tabgroup-1-0-tabpanel"
                role="tabpanel"
                tabindex="0"
              >
                <form>
                  <div
                    class="c19"
                  >
                    <label>
                      <div
                        class="c20 c21"
                      >
                        <div
                          class="c22"
                        >
                          <div
                            class="c23 c24"
                          >
                            <div
                              class="c25"
                            >
                              <svg
                                aria-hidden="true"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 20"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21.525 2.394H7.814v1.582h13.711c.47 0 .824.498.824 1.091v9.834l-2.785-3.165c-.2-.233-.453-.42-.738-.549a2.21 2.21 0 00-.91-.194 2.209 2.209 0 00-.91.19 2.126 2.126 0 00-.739.545l-2.925 3.378-2.967-3.354a2.143 2.143 0 00-.739-.543 2.226 2.226 0 00-.909-.193c-.315.002-.626.07-.911.2-.285.13-.536.318-.737.552l-2.925 3.425V7.637H2.505v9.874c.023.153.059.304.107.451v.127l.042.095c.056.142.125.28.206.411l.099.15c.074.106.157.207.247.301l.123.119c.13.118.274.221.429.308h.025c.358.214.772.327 1.195.325h16.481a2.47 2.47 0 001.037-.239c.322-.153.605-.375.826-.648.222-.263.392-.564.502-.886.067-.216.108-.439.124-.664V5.067a2.493 2.493 0 00-.65-1.805 2.7 2.7 0 00-1.773-.868z"
                                  fill="#32324D"
                                />
                                <path
                                  d="M12.526 9.18c.91 0 1.648-.708 1.648-1.582 0-.874-.738-1.582-1.648-1.582-.91 0-1.648.708-1.648 1.582 0 .874.738 1.582 1.648 1.582zM3.297 6.395h.823V3.988h2.473v-.79-.792H4.12V0h-.823c-.219 0-.849.002-.825 0v2.406H0v1.582h2.472v2.407h.825z"
                                  fill="#32324D"
                                />
                              </svg>
                            </div>
                            <div
                              class="c26"
                            >
                              <span
                                class="c27"
                              >
                                Drag & Drop here or
                              </span>
                            </div>
                            <input
                              class="c28 c29"
                              multiple=""
                              name="files"
                              tabindex="-1"
                              type="file"
                              width="100%"
                            />
                            <div
                              class="c30"
                            >
                              <button
                                aria-disabled="false"
                                class="c31 c32"
                                type="button"
                              >
                                <span
                                  class="c33 c34"
                                >
                                  Browse files
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    class="c4 c35"
                  >
                    <div
                      class="c6"
                    >
                      <div
                        class="c36 c37"
                      >
                        <button
                          aria-disabled="false"
                          class="c31 c38"
                          type="button"
                        >
                          <span
                            class="c33 c34"
                          >
                            app.components.Button.cancel
                          </span>
                        </button>
                      </div>
                      <div
                        class="c36 c37"
                      />
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UploadAssetDialog from url snapshots the component 1`] = `
<body
  class="lock-body-scroll"
>
  .c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
    class="c0"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
  .c1 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c3 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c0 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: rgb(220,220,228,0.8);
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  width: 51.875rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c7 svg {
  height: 12px;
  width: 12px;
}

.c7 svg > g,
.c7 svg path {
  fill: #ffffff;
}

.c7[aria-disabled='true'] {
  pointer-events: none;
}

.c7:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c7:focus-visible {
  outline: none;
}

.c7:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c8 svg > g,
.c8 svg path {
  fill: #8e8ea9;
}

.c8:hover svg > g,
.c8:hover svg path {
  fill: #666687;
}

.c8:active svg > g,
.c8:active svg path {
  fill: #a5a5ba;
}

.c8[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c8[aria-disabled='true'] svg path {
  fill: #666687;
}

.c4 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c26 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c28 > * + * {
  margin-left: 8px;
}

.c6 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c16 {
  background: #eaeaef;
}

.c17 {
  height: 1px;
  border: none;
  margin: 0;
}

.c9 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c18 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c15 {
  color: #4945ff;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c13 {
  color: #666687;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c11 {
  padding: 16px;
}

.c14 {
  border-bottom: 2px solid #4945ff;
}

.c12 {
  border-bottom: 2px solid transparent;
}

.c10[aria-disabled='true'] {
  cursor: not-allowed;
}

.c22 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c25 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c23:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c24 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
}

.c24::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c24::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c24:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c24::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c24:focus-within {
  outline: none;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 4px;
}

.c19 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c19 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c19 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c19 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c19 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c32 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c29 svg {
  height: 12px;
  width: 12px;
}

.c29 svg > g,
.c29 svg path {
  fill: #ffffff;
}

.c29[aria-disabled='true'] {
  pointer-events: none;
}

.c29:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c29:focus-visible {
  outline: none;
}

.c29:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c33 .sc-iitrMj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 .c31 {
  color: #ffffff;
}

.c33[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true'] .c31 {
  color: #666687;
}

.c33[aria-disabled='true'] svg > g,
.c33[aria-disabled='true'] svg path {
  fill: #666687;
}

.c33[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true']:active .c31 {
  color: #666687;
}

.c33[aria-disabled='true']:active svg > g,
.c33[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c33:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c33:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c30 .sc-iitrMj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 .c31 {
  color: #ffffff;
}

.c30[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c30[aria-disabled='true'] .c31 {
  color: #666687;
}

.c30[aria-disabled='true'] svg > g,
.c30[aria-disabled='true'] svg path {
  fill: #666687;
}

.c30[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c30[aria-disabled='true']:active .c31 {
  color: #666687;
}

.c30[aria-disabled='true']:active svg > g,
.c30[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c30:hover {
  background-color: #f6f6f9;
}

.c30:active {
  background-color: #eaeaef;
}

.c30 .c31 {
  color: #32324d;
}

.c30 svg > g,
.c30 svg path {
  fill: #32324d;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0"
    >
      <div>
        <div
          aria-labelledby="title"
          aria-modal="true"
          class="c1 c2"
          role="dialog"
        >
          <div
            class="c3 c4"
          >
            <div
              class="c5"
            >
              <h2
                class="c6"
                id="title"
              >
                Upload assets
              </h2>
              <button
                aria-disabled="false"
                aria-label="Close the modal"
                class="c7 c8"
                type="button"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                    fill="#212134"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div>
            <div
              class="c9"
            >
              <div
                aria-label="How do you want to upload your assets?"
                role="tablist"
              >
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c10"
                  id="tabgroup-8-0-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c11 c12"
                  >
                    <span
                      class="c13"
                    >
                      From computer
                    </span>
                  </div>
                </button>
                <button
                  aria-controls="tabgroup-8-1-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c10"
                  id="tabgroup-8-1-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c11 c14"
                  >
                    <span
                      class="c15"
                    >
                      From url
                    </span>
                  </div>
                </button>
              </div>
              <hr
                class="c16 c17"
              />
            </div>
            <div>
              <div
                aria-labelledby="tabgroup-8-1-tab"
                id="tabgroup-8-1-tabpanel"
                role="tabpanel"
                tabindex="0"
              >
                <form
                  action="#"
                  novalidate=""
                >
                  <div
                    class="c18"
                  >
                    <div
                      class="c19"
                    >
                      <div>
                        <div
                          class="c20"
                        >
                          <div
                            class="c21"
                          >
                            <label
                              class="c22"
                              for="textarea-1"
                            >
                              URL
                            </label>
                          </div>
                          <div
                            class="c23"
                          >
                            <textarea
                              aria-describedby="textarea-1-hint"
                              aria-invalid="false"
                              class="c24"
                              id="textarea-1"
                              name="urls"
                            />
                          </div>
                          <p
                            class="c25"
                            id="textarea-1-hint"
                          >
                            Separate your URL links by a carriage return.
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c3 c26"
                  >
                    <div
                      class="c5"
                    >
                      <div
                        class="c27 c28"
                      >
                        <button
                          aria-disabled="false"
                          class="c29 c30"
                          type="button"
                        >
                          <span
                            class="c31 c32"
                          >
                            app.components.Button.cancel
                          </span>
                        </button>
                      </div>
                      <div
                        class="c27 c28"
                      >
                        <button
                          aria-disabled="false"
                          class="c29 c33"
                          type="submit"
                        >
                          <span
                            class="c31 c32"
                          >
                            Next
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
